--- a/.github/workflows/splunkbase-release-action.yml
+++ b/.github/workflows/splunkbase-release-action.yml
@@ -49,6 +49,7 @@ jobs:
   splunkbase-release:
     name: Splunkbase release
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v2.4.0
       - uses: actions/download-artifact@v2.1.0
