--- a/.github/workflows/splunkbase-release-action.yml
+++ b/.github/workflows/splunkbase-release-action.yml
@@ -10,10 +10,10 @@ on:
     secrets:
       SPLUNKBASE_USER:
         description: "Splunkbase username"
-        required: false
+        required: true
       SPLUNKBASE_PASSWORD:
         description: "Splunkbase password"
-        required: false
+        required: true
 
 jobs:
   build:
@@ -57,11 +57,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v2.4.0
       - uses: actions/download-artifact@v2.1.0
         with:
           name: ${{ needs.build.outputs.ADDON_NAME }}-${{ needs.build.outputs.ADDON_VERSION }}.tar.gz
           path: dist
+      - uses: actions/checkout@v2.4.0
       - name: Load ENV variables
         id: load_vars
         run: |
