--- a/.github/workflows/splunkbase-release-action.yml
+++ b/.github/workflows/splunkbase-release-action.yml
@@ -57,18 +57,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v2.4.0
       - uses: actions/download-artifact@v2.1.0
         with:
           name: ${{ needs.build.outputs.ADDON_NAME }}-${{ needs.build.outputs.ADDON_VERSION }}.tar.gz
           path: dist
-      - uses: actions/checkout@v2.4.0
       - name: Load ENV variables
-        id: load_vars
+        id: vars
         run: |
           source .splunkbase
           echo ::set-output name=SPLUNKBASE_ID::"$SPLUNKBASE_ID"
           echo ::set-output name=SPLUNKBASE_SPLUNK_VERSION::"$SPLUNKBASE_SPLUNK_VERSION"
           echo ::set-output name=SPLUNKBASE_SPLUNK_CIM_VERSION::"$SPLUNKBASE_SPLUNK_CIM_VERSION"
+          echo $SPLUNKBASE_ID
+          echo $SPLUNKBASE_SPLUNK_VERSION
+          echo $SPLUNKBASE_SPLUNK_CIM_VERSION
       - name: Authenticate to Splunkbase
         id: login
         shell: bash
