--- a/.github/workflows/splunkbase-release-action.yml
+++ b/.github/workflows/splunkbase-release-action.yml
@@ -7,13 +7,12 @@ on:
         required: false
         type: string
         default: "5.10.2"
+    secrets:
       SPLUNKBASE_USER:
         description: "Splunkbase username"
-        type: string
         required: true
       SPLUNKBASE_PASSWORD:
         description: "Splunkbase password"
-        type: string
         required: true
 
 jobs:
